@@ -16,7 +16,7 @@ $_lang['setting_seopro.fields'] = 'Fields where SEO Pro will work on';
 $_lang['setting_seopro.fields_desc'] = 'Only change these if you know what you\'re doing. Default value:pagetitle,longtitle,description,alias,menutitle. Will not work on the content field';
 $_lang['setting_seopro.version'] ='Version number';
 $_lang['setting_seopro.version_desc']= 'Current '.$_lang['setting_seopro.version'];
-$_lang['setting_seopro.allowbranding'] ='Allow Sterc branding in the <head>';
+$_lang['setting_seopro.allowbranding'] ='Allow Sterc branding in the &lt;head&gt;';
 $_lang['setting_seopro.allowbranding_desc']= 'Show us some love ;x';
 $_lang['setting_seopro.usesitename'] ='Display sitename in the Google/Yandex Preview and add it to the SEO Pro title placeholder [[+seoPro.title]]?';
 $_lang['setting_seopro.usesitename_desc']= 'If this value is \'no\' the delimiter and sitename setting will be removed from the Google Preview AND SEO Pro title placeholder';
