@@ -16,7 +16,7 @@ $_lang['setting_seopro.fields'] = 'Velden waarop SEO Pro zal werken ';
 $_lang['setting_seopro.fields_desc'] = 'Verander deze gegevens alleen als je weet wat je doet. Standaard waarde:pagetitle,longtitle,description,alias,menutitle. SEO Pro werkt niet op het content veld';
 $_lang['setting_seopro.version'] ='Versie nummer';
 $_lang['setting_seopro.version_desc']= 'Huidige '.$_lang['setting_seopro.version'];
-$_lang['setting_seopro.allowbranding'] ='Toestaan van Sterc branding in de <head>';
+$_lang['setting_seopro.allowbranding'] ='Toestaan van Sterc branding in de &lt;head&gt;';
 $_lang['setting_seopro.allowbranding_desc']= 'Give us some love...';
 $_lang['setting_seopro.usesitename'] ='Site naam tonen in Google/Yandex Preview en in de SEO Pro title placeholder [[+seoPro.title]]?';
 $_lang['setting_seopro.usesitename_desc']= 'Als deze op \'nee\' staat wordt het scheidingsteken en de sitenaam niet getoond.';
